--- a/generators/components/Component.stories.tsx.hbs
+++ b/generators/components/Component.stories.tsx.hbs
@@ -2,13 +2,9 @@ import { Meta, StoryObj } from "@storybook/react";
 
 import { {{ pascalCase name }} } from "./{{ pascalCase name }}";
 
-type T = typeof {{ pascalCase name }};
-
-export default {
+const meta = {
   component: {{ pascalCase name }},
-  args: {
-    children: "default",
-  },
-} satisfies Meta<T>;
+} satisfies Meta<typeof {{ pascalCase name }}>;
 
-export const Default: StoryObj<T> = {};
+export default meta;
+type Story = StoryObj<typeof meta>;
